VERSION 0.2.2

IN PROGRESS...

===================================================

VERSION 0.2.1

19.03.2014

* Fixed crash on world generation
* Now if no resolution is suitable, select an unsuitable one
+ Added zorsan rifle weapon and research projects for it
* Planet scan window moved to separate screen
* Music is now loaded in separate threads and stored by SoftReference to prevent excessive memory usage and game start delays
* Updated Frankenstein to 0.1.1

====================================================

VERSION 0.2.0

11.03.2014

+ New story and dialogs, tons of them
+ Tools to load dialogs from CSV files
+ Added in-game story journal
+ Dungeon entrances on planet surface
+ Confirmation on exit game
+ Scan screen now shows areas of interest on planet
* Locale can now be read from properties
* Dialog system improved. Now replies can set flags that can be queried after dialog end.
 Flags can also be used to hide replies, just like global variables.
* Monster and ship parameters tuned
* Intro dialogs are now shown in parallel with world generation

======================================================

VERSION 0.1.3

6.11.2013

+ Multiple resolution and fullscreen support
+ slf4j logging added
+ Quest line with rogues beacon completed
* Support for individual images for dialog statements
* New nice looking main menu
* New star sprites for background
* Bugfix

======================================================

VERSION 0.1.2

28.10.2013

+ New Swarm alien race
+ NPC ships can now fight each other, added relationship system between races
+ Line of sight and visibility calculation for dungeons
+ Warp effect for gardener ship
* Bugfix


======================================================

VERSION 0.1.1

21.10.2013

* Custom scanning descriptions for home planets
* Game pausing during modal dialogs is now working
* Some new art
* Bugfix

======================================================
VERSION 0.1.0

10.10.2013

+ Localization support